reference/tests/snapshots/snapshot__run_reference_prql@misc-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/examples/misc-1.prql
---
SELECT
  club_ratings.*,
  rating - AVG(rating) / STDDEV(rating) OVER (PARTITION BY year) AS rating_norm
FROM
  club_ratings
WHERE
  rating != null
