reference/tests/snapshots/snapshot__run_reference_prql@null-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/null-1.prql
---
SELECT
  col1,
  col2
FROM
  tbl
WHERE
  col1 = col2
