reference/tests/snapshots/snapshot__run_reference_prql@pipelines-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/queries/pipelines-1.prql
---
SELECT
  employees.*,
  salary + payroll_tax AS gross_salary
FROM
  employees
