reference/tests/snapshots/snapshot__run_reference_prql@pipelines-4.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/queries/pipelines-4.prql
---
SELECT
  col1,
  col2
FROM
  tbl
WHERE
  col1 = col2
