reference/tests/snapshots/snapshot__run_reference_prql@s-strings-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/language-features/s-strings-1.prql
---
SELECT
  AVG(salary)
FROM
  employees
